# Hackathon-ll-phase-lll-AI-Powered-Todo-Chatbot

./: .gitignore  DEPLOYMENT.md  README.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 8335fb1bfb29_initial_schema.py  a1b2c3d4e5f6_add_phase3_chat_tables.py
backend/src/: db.py  main.py
backend/src/api/: auth.py  tasks.py
backend/src/auth/: __init__.py  dependencies.py  jwt.py  password.py
backend/src/middleware/: __init__.py  logging.py
backend/src/models/: README.md  __init__.py  base.py  failure_mode.py  skill.py  task.py  user.py
backend/src/services/skills/: __init__.py  base.py  context.py  models.py  registry.py
backend/src/services/skills/ai/: __init__.py
backend/src/services/skills/auth/: __init__.py
backend/src/services/skills/execution/: __init__.py
backend/src/services/skills/orchestration/: __init__.py
backend/src/services/skills/planning/: __init__.py
backend/src/services/skills/task/: __init__.py
backend/src/services/skills/user/: __init__.py
backend/tests/: conftest.py
backend/tests/contract/: test_chat_complete.py  test_chat_create.py  test_chat_delete.py  test_chat_fallback.py  test_chat_list.py  test_chat_update.py  test_task_schemas.py  test_user_schemas.py  test_validation_contract.py
backend/tests/contract/skills/: __init__.py
backend/tests/integration/: test_chat_complete_flow.py  test_chat_delete_flow.py  test_chat_list_flow.py  test_chat_timeout.py  test_chat_update_flow.py  test_quickstart_examples.py  test_requirements_verification.py  test_user_task_relationship.py
backend/tests/integration/skills/: __init__.py
backend/tests/unit/: test_interpreter_complete.py  test_interpreter_delete.py  test_interpreter_list.py  test_interpreter_update.py  test_password.py  test_schema_evolution.py  test_task_model.py  test_user_model.py  test_validation_errors.py
docs/: phase1-constitution.md  phase2-execution.md  phase3-final.md
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/app/tasks/[id]/edit/: page.tsx
frontend/src/components/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/lib/: api.ts  auth.tsx
history/adr/: ADR-001-ai-integration-architecture.md  ADR-002-backend-technology-stack.md  ADR-003-frontend-technology-stack.md  ADR-004-skills-library-architecture.md  ADR-005-graceful-degradation-strategy.md
history/prompts/001-system-design-phase2/: 001-system-design-phase2-spec.spec.prompt.md
history/prompts/002-agents-phase2/: 001-agents-phase2-spec.spec.prompt.md
history/prompts/003-skills-library-phase2/: 001-skills-library-phase2-spec.spec.prompt.md  002-skills-library-plan.plan.prompt.md  003-skills-library-tasks.tasks.prompt.md
history/prompts/004-task-graph-phase2/: 001-task-graph-spec.spec.prompt.md  002-task-graph-plan.plan.prompt.md
history/prompts/005-data-schemas-phase2/: 001-data-schemas-spec.spec.prompt.md
history/prompts/006-ai-chat/: 005-phase9-polish-middleware.green.prompt.md
history/prompts/constitution/: 001-todo-app-phase-ii-constitution.constitution.prompt.md
history/prompts/data-schemas-phase2/: 001-validate-spec-quality.spec.prompt.md  002-implementation-plan-design.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md
phase-2/: agents.spec.md  constitution.md  skills.spec.md  system.spec.md  tasks.graph.md
specs/001-system-design-phase2/: spec.md
specs/001-system-design-phase2/checklists/: requirements.md
specs/002-agents-phase2/: spec.md
specs/002-agents-phase2/checklists/: requirements.md
specs/003-skills-library-phase2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-skills-library-phase2/checklists/: requirements.md
specs/003-skills-library-phase2/contracts/: skills-api.yaml
specs/004-task-graph-phase2/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/004-task-graph-phase2/checklists/: requirements.md
specs/004-task-graph-phase2/contracts/: task-graph-api.yaml
specs/005-data-schemas-phase2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-data-schemas-phase2/checklists/: requirements.md
specs/005-data-schemas-phase2/contracts/: openapi.yaml
specs/006-ai-chat/: tasks.md
